--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -3,7 +3,7 @@ nav {
 }
 
 .navlink {
-  @apply inline-flex flex-col items-center justify-center px-8 hover:bg-gray-50 dark:hover:bg-gray-800 space-y-1 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-500;
+  @apply inline-flex flex-col items-center justify-center px-8 hover:bg-green-100/50 dark:hover:bg-green-800/40 space-y-1 text-gray-600 dark:text-gray-400 hover:text-green-600 dark:hover:text-green-500;
 }
 
 .navlink .text {
@@ -11,5 +11,5 @@ nav {
 }
 
 .navlink.active {
-  @apply text-blue-600 dark:text-blue-500;
+  @apply text-green-600 dark:text-green-500;
 }
