--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -4,7 +4,7 @@ td {
 td:not(:last-child) {
     @apply text-left;
 }
-td:nth-child(2) {
+td:not(:first-child) {
     @apply text-gray-800/75 dark:text-white/75;
 }
 td:last-child {
